# music-demix

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt  test.py  utils.py
models/: htdemucs.py
models/bs_roformer/: __init__.py  attend.py  bs_roformer.py
